[package]
name = "soloud-rust-sys"
version = "0.1.0"
authors = ["Mason Remaley <MasonRemaley@users.noreply.github.com>"]
edition = "2018"

[dependencies]
libc = "0.2.58"

[build-dependencies]
cc = "1.0.37"
glob = "0.3.0"

[features]
# NOTE: The only backend I got working was coreaudio, others I didn't try for they failed during
# initialization
# sdl = []
coreaudio = []
null = []
# sdl_dynamic = []
sdl1_dynamic = []
sdl2_dynamic = []
# sdl2_dynamic
# sdl_static
# sdl1_static
# sdl2_static
# portaudio
# openal
# xaudio
# winmm
# wasapi (experimental
# oss
# alsa
# opensles
# vita_homebrew
# null
